[gd_scene load_steps=5 format=3 uid="uid://hmrs6dblpe7k"]

[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="1_1n8hx"]
[ext_resource type="Script" uid="uid://bltllrgirqa6d" path="res://UI/ResourceRequiredFloatingPanel/resource_required_floating_panel.gd" id="1_mrhob"]
[ext_resource type="LabelSettings" uid="uid://d0wal13o44wsq" path="res://Scenes/TrainingProgram/parts/Cards/RoomMiniCard/SmallContentFont.tres" id="2_mrhob"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ei0u"]
bg_color = Color(0.337255, 0.27451, 1, 1)

[node name="ResourceRequiredFloatingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mrhob")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IconBtn" parent="Control" instance=ExtResource("1_1n8hx")]
layout_mode = 0
offset_left = -17.0
offset_top = 35.0
offset_right = 8.0
offset_bottom = 60.0
icon = 28
static_color = Color(0.368627, 0.407843, 0.996078, 1)
is_hoverable = false
hint_icon = 28

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 88.0
offset_bottom = 94.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0ei0u")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="IconBtn" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_1n8hx")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = 39
is_hoverable = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"
label_settings = ExtResource("2_mrhob")
horizontal_alignment = 1

[node name="IconBtn" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_1n8hx")]
layout_mode = 2
icon = 27
is_hoverable = false

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"
label_settings = ExtResource("2_mrhob")
horizontal_alignment = 1
